[gd_scene load_steps=4 format=3 uid="uid://c3djdx1g5df8s"]

[ext_resource type="InventoryDatabase" uid="uid://cbh4agn0hf6m" path="res://Sources/Items/database.tres" id="1_0xlmf"]
[ext_resource type="Script" uid="uid://8a3lxhb4htmg" path="res://Sources/Scenes/tests.gd" id="1_nkkyk"]
[ext_resource type="Script" uid="uid://cqvd7tfhqeoe1" path="res://Sources/UI/Inventory/simple_inventory.gd" id="3_inq0d"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_nkkyk")

[node name="Inventory" type="Inventory" parent="."]
database = ExtResource("1_0xlmf")

[node name="Inventory2" type="Inventory" parent="."]
database = ExtResource("1_0xlmf")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 1152.0
offset_bottom = 651.0

[node name="SimpleInventoryUI" type="ItemList" parent="HBoxContainer" node_paths=PackedStringArray("inventory")]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("3_inq0d")
inventory = NodePath("../../Inventory")
metadata/_custom_type_script = "uid://cqvd7tfhqeoe1"

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = ">>>>"

[node name="Button2" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "<<<<"

[node name="SimpleInventoryUI2" type="ItemList" parent="HBoxContainer" node_paths=PackedStringArray("inventory")]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("3_inq0d")
inventory = NodePath("../../Inventory2")
metadata/_custom_type_script = "uid://cqvd7tfhqeoe1"

[connection signal="button_down" from="HBoxContainer/Button" to="." method="_on_left_button_down"]
[connection signal="button_down" from="HBoxContainer/Button2" to="." method="_on_right_button_down"]
